@@ -4,6 +4,11 @@
 Known Issues
 ============
 
+* S3QL does not support Access Control Lists (ACLs). This is due to
+  a bug in the FUSE library and will therefore hopefully be fixed
+  at some point. See `issue 385 <http://code.google.com/p/s3ql/issues/detail?id=385>`_
+  for more details.
+
 * S3QL does not verify TLS/SSL server certificates, so a
   man-in-the-middle attack is principally possible. See `issue 267
   <http://code.google.com/p/s3ql/issues/detail?id=267>`_ for more
